[package]
name = "advent"
version = "0.1.0"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mmap = ["dep:memmap2"]
parallel = ["dep:rayon"]

[lib]
path = "src/lib.rs"

[dependencies]
aho-corasick = "1.1.2"
anyhow = "1.0.75"
grid = "0.12.0"
memmap2 = { version = "0.9.0", optional = true }
rayon = { version = "1.8.0", optional = true }
